# nti.externalization

./: .coveragerc  .gitignore  .isort.cfg  .nti_cover_package  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  babel.cfg  doc-requirements.txt  make-manylinux  nose2.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
doc/: api.rst  conf.py
docs/: Makefile  api.rst  basics.rst  conf.py  externalization.rst  glossary.rst  index.rst  internalization.rst  schemas.rst  special_attributes.rst
docs/api/: ADVANCED.rst  BASICS.rst  HELPERS.rst  STRINGS.rst  ZODB.rst  autopackage.rst  datastructures.rst  datetime.rst  dublincore.rst  extension_points.rst  externalization.rst  factory.rst  index.rst  integer_strings.rst  interfaces.rst  internalization.rst  oids.rst  persistence.rst  proxy.rst  representation.rst  singleton.rst  zcml.rst
src/: .gitignore
src/nti/externalization/: __base_interfaces.pxd  __init__.py  __interface_cache.pxd  _base_interfaces.pxd  _base_interfaces.py  _compat.py  _datastructures.pxd  _externalization.pxd  _interface_cache.py  _internalization.pxd  _pyramid.py  _singleton.pxd  _threadlocal.py  autopackage.py  base_interfaces.py  configure.zcml  datastructures.py  datetime.py  datetime_ext.py  dublincore.py  extension_points.py  externalization.py  factory.py  integer_strings.py  interfaces.py  internalization.py  meta.zcml  numbers.py  oids.py  persistence.py  proxy.py  representation.py  singleton.py  testing.py  threadlocal.py  zcml.py
src/nti/externalization/externalization/: __init__.py  _decorate.pxd  _dictionary.pxd  _externalizer.pxd  _fields.pxd  _standard_fields.pxd  decorate.py  dictionary.py  externalizer.py  fields.py  replacers.py  standard_fields.py
src/nti/externalization/files/: LICENSE
(+50 files in other folders)
